--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,18 @@
-CLIENT_TOKEN="" # Discord Client Token <https://discord.com/developers/applications>
-CLIENT_ID="" # Discord Client ID <https://discord.com/developers/applications>
-CLIENT_SECRET="" # Discord Client Secret <https://discord.com/developers/applications>
+# Discord bot credentials
+CLIENT_TOKEN="YOUR_DISCORD_CLIENT_TOKEN"
+CLIENT_ID="YOUR_DISCORD_CLIENT_ID"
+CLIENT_SECRET="YOUR_DISCORD_CLIENT_SECRET"
 
+# Crash handler
 ENABLE_CRASH_HANDLER=true
 ENABLE_CRASH_WEBHOOK=true
 EXIT_ON_CRASH=false
-CRASH_HANDLER_WEBHOOK=https://discord.com/api/webhooks/xxxx/xxxx
+CRASH_HANDLER_WEBHOOK="YOUR_CRASH_HANDLER_WEBHOOK_URL"
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Channels
+WEEKLY_REPORT_CHANNEL_ID="YOUR_WEEKLY_REPORT_CHANNEL_ID"
+APPEAL_LOG_CHANNEL_ID="YOUR_APPEAL_LOG_CHANNEL_ID"
+
+# Database URLs
+DATABASE_URL="YOUR_PRISMA_DATABASE_URL"
+DIRECT_DATABASE_URL="mysql://USERNAME:PASSWORD@HOST:PORT/DATABASE_NAME"
