--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "@milkshakecollective/somebot-bot",
-  "version": "1.0.0",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MilkshakeCollective/bot-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/MilkshakeCollective/bot-template/issues"
-  },
-  "homepage": "https://github.com/MilkshakeCollective/bot-template#readme",
-  "scripts": {
-    "lint": "prettier --check --plugin-search-dir=. .",
-    "build": "turbo run build",
-    "format": "prettier --write --plugin-search-dir=. .",
-    "prisma": "npx prisma generate",
-    "start-bot": "node ./packages/bot/dist/index.js"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.27",
-    "dotenv-cli": "^7.4.1",
-    "prettier": "^3.2.5",
-    "prettier-eslint": "^16.3.0",
-    "prisma": "^5.11.0",
-    "turbo": "^2.0.9",
-    "typescript": "^5.4.2"
-  },
-  "packageManager": "npm@10.8.1"
+	"name": "@milkshakecollective/onlinesafety",
+	"version": "2.0.0",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/MilkshakeCollective/OnlineSafety-bot.git"
+	},
+	"bugs": {
+		"url": "https://github.com/MilkshakeCollective/OnlineSafety-bot/issues"
+	},
+	"homepage": "https://github.com/MilkshakeCollective/OnlineSafety-bot#readme",
+	"scripts": {
+		"lint": "prettier --check --plugin-search-dir=. .",
+		"build": "turbo run build",
+		"format": "prettier --write --plugin-search-dir=. .",
+		"prisma": "npx prisma generate --no-engine",
+		"migrate": "npx prisma migrate dev --name init",
+		"migrate-reset": "npx prisma migrate reset --force",
+		"deploy-migrate": "npx prisma migrate deploy",
+		"start-bot": "node ./packages/bot/dist/index.js"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.27",
+		"dotenv-cli": "^7.4.1",
+		"prettier": "^3.2.5",
+		"prettier-eslint": "^16.3.0",
+		"prisma": "^6.14.0",
+		"turbo": "^2.0.9",
+		"typescript": "^5.4.2"
+	},
+	"packageManager": "npm@10.8.1"
 }
