--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@milkshakecollective/bot-somebot-bot",
+  "name": "@milkshakecollective/bot",
   "version": "1.0.0",
   "private": true,
   "main": "./dist/index.js",
@@ -9,24 +9,32 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MilkshakeCollective/bot-template.git"
+    "url": "git+https://github.com/MilkshakeCollective/OnlineSafety-bot.git"
   },
   "bugs": {
-    "url": "https://github.com/MilkshakeCollective/bot-template/issues"
+    "url": "https://github.com/MilkshakeCollective/OnlineSafety-bot/issues"
   },
-  "homepage": "https://github.com/MilkshakeCollective/bot-template#readme",
+  "homepage": "https://github.com/MilkshakeCollective/OnlineSafety-bot#readme",
   "devDependencies": {
+    "@types/ms": "^2.1.0",
     "@types/node": "^20.11.27",
-    "prisma": "^5.11.0",
+    "prisma": "^6.14.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
     "@chatsift/pino-rotate-file": "^0.3.0",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^6.14.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.6.8",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "ms": "^2.1.3",
     "nanoid": "^5.0.6",
+    "node-cron": "^4.2.1",
+    "openai": "^5.16.0",
+    "perspective-api-client": "^3.1.0",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma-error-enum": "^0.1.3"
