--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ES2022",
 		"lib": ["ES2023"],
 		"module": "ES2022",
-		"moduleResolution": "Node",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"importHelpers": true,
 		"pretty": true,
