--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@milkshakecollective/onlinesafety",
+	"name": "@milkshakecollective/stachio",
 	"version": "2.0.0",
 	"private": true,
 	"workspaces": [
@@ -7,12 +7,12 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/MilkshakeCollective/OnlineSafety-bot.git"
+		"url": "git+https://github.com/MilkshakeCollective/stachio-bot.git"
 	},
 	"bugs": {
-		"url": "https://github.com/MilkshakeCollective/OnlineSafety-bot/issues"
+		"url": "https://github.com/MilkshakeCollective/stachio-bot/issues"
 	},
-	"homepage": "https://github.com/MilkshakeCollective/OnlineSafety-bot#readme",
+	"homepage": "https://github.com/MilkshakeCollective/stachio-bot#readme",
 	"scripts": {
 		"lint": "prettier --check --plugin-search-dir=. .",
 		"build": "turbo run build",
@@ -24,13 +24,8 @@
 		"start-bot": "node ./packages/bot/dist/index.js"
 	},
 	"devDependencies": {
-		"@types/node": "^20.11.27",
-		"dotenv-cli": "^7.4.1",
 		"prettier": "^3.2.5",
-		"prettier-eslint": "^16.3.0",
-		"prisma": "^6.14.0",
-		"turbo": "^2.0.9",
-		"typescript": "^5.4.2"
+		"turbo": "^2.5.6"
 	},
 	"packageManager": "npm@10.8.1"
 }
