--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -9,32 +9,30 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MilkshakeCollective/OnlineSafety-bot.git"
+    "url": "git+https://github.com/MilkshakeCollective/stachio-bot.git"
   },
   "bugs": {
-    "url": "https://github.com/MilkshakeCollective/OnlineSafety-bot/issues"
+    "url": "https://github.com/MilkshakeCollective/stachio-bot/issues"
   },
-  "homepage": "https://github.com/MilkshakeCollective/OnlineSafety-bot#readme",
+  "homepage": "https://github.com/MilkshakeCollective/stachio-bot#readme",
   "devDependencies": {
     "@types/ms": "^2.1.0",
     "@types/node": "^20.11.27",
-    "prisma": "^6.14.0",
-    "typescript": "^5.4.2"
+    "prisma": "^6.15.0",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@chatsift/pino-rotate-file": "^0.3.0",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
-    "axios": "^1.6.8",
-    "chart.js": "^4.5.0",
-    "chartjs-node-canvas": "^5.0.0",
+    "axios": "^1.11.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "i18next": "^25.4.2",
+    "i18next-fs-backend": "^2.6.0",
     "ms": "^2.1.3",
     "nanoid": "^5.0.6",
     "node-cron": "^4.2.1",
-    "openai": "^5.16.0",
-    "perspective-api-client": "^3.1.0",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma-error-enum": "^0.1.3"
