--- a/.env.template
+++ b/.env.template
@@ -9,9 +9,12 @@ ENABLE_CRASH_WEBHOOK=true
 EXIT_ON_CRASH=false
 CRASH_HANDLER_WEBHOOK="YOUR_CRASH_HANDLER_WEBHOOK_URL"
 
+DEFAULT_LANGUAGE="en-US"
+
 # Channels
 WEEKLY_REPORT_CHANNEL_ID="YOUR_WEEKLY_REPORT_CHANNEL_ID"
 APPEAL_LOG_CHANNEL_ID="YOUR_APPEAL_LOG_CHANNEL_ID"
+WATCHDOG_REPORT_CHANNEL_ID="YOUR_REPORT_LOG_CHANNEL_ID"
 
 # Database URLs
 DATABASE_URL="YOUR_PRISMA_DATABASE_URL"
