--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -26,8 +26,10 @@
     "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
+    "body-parser": "^2.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "i18next": "^25.4.2",
     "i18next-fs-backend": "^2.6.0",
     "ms": "^2.1.3",
