--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"devDependencies": {
 		"prettier": "^3.2.5",
+		"prisma": "^6.15.0",
 		"turbo": "^2.5.6"
 	},
 	"packageManager": "npm@10.8.1"
