--- a/turbo.json
+++ b/turbo.json
@@ -1,19 +1,13 @@
 {
-  "$schema": "./node_modules/turbo/schema.json",
-  "tasks": {
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
-    },
-    "lint": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": []
-    }
-  }
+	"$schema": "./node_modules/turbo/schema.json",
+	"tasks": {
+		"build": {
+			"dependsOn": ["^build"],
+			"outputs": ["dist/**"]
+		},
+		"lint": {
+			"dependsOn": ["^build"],
+			"outputs": []
+		}
+	}
 }
