--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "@milkshakecollective/bot",
-  "version": "1.0.0",
-  "private": true,
-  "main": "./dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MilkshakeCollective/stachio-bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/MilkshakeCollective/stachio-bot/issues"
-  },
-  "homepage": "https://github.com/MilkshakeCollective/stachio-bot#readme",
-  "devDependencies": {
-    "@types/ms": "^2.1.0",
-    "@types/node": "^20.11.27",
-    "prisma": "^6.15.0",
-    "typescript": "^5.9.2"
-  },
-  "dependencies": {
-    "@chatsift/pino-rotate-file": "^0.3.0",
-    "@prisma/client": "^6.15.0",
-    "@prisma/extension-accelerate": "^2.0.2",
-    "axios": "^1.11.0",
-    "body-parser": "^2.2.0",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "express": "^5.1.0",
-    "i18next": "^25.4.2",
-    "i18next-fs-backend": "^2.6.0",
-    "ms": "^2.1.3",
-    "nanoid": "^5.0.6",
-    "node-cron": "^4.2.1",
-    "pino": "^8.19.0",
-    "pino-pretty": "^10.3.1",
-    "prisma-error-enum": "^0.1.3"
-  }
+	"name": "@milkshakecollective/bot",
+	"version": "1.0.0",
+	"private": true,
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"type": "module",
+	"scripts": {
+		"build": "tsc --build"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/MilkshakeCollective/stachio-bot.git"
+	},
+	"bugs": {
+		"url": "https://github.com/MilkshakeCollective/stachio-bot/issues"
+	},
+	"homepage": "https://github.com/MilkshakeCollective/stachio-bot#readme",
+	"devDependencies": {
+		"@types/ms": "^2.1.0",
+		"@types/node": "^20.11.27",
+		"prisma": "^6.15.0",
+		"typescript": "^5.9.2"
+	},
+	"dependencies": {
+		"@chatsift/pino-rotate-file": "^0.3.0",
+		"@prisma/client": "^6.15.0",
+		"axios": "^1.11.0",
+		"body-parser": "^2.2.0",
+		"discord.js": "^14.14.1",
+		"dotenv": "^16.4.5",
+		"express": "^5.1.0",
+		"i18next": "^25.4.2",
+		"i18next-fs-backend": "^2.6.0",
+		"ms": "^2.1.3",
+		"nanoid": "^5.0.6",
+		"node-cron": "^4.2.1",
+		"pino": "^8.19.0",
+		"pino-pretty": "^10.3.1",
+		"prisma-error-enum": "^0.1.3"
+	}
 }
