--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -27,6 +27,7 @@
 		"@prisma/client": "^6.15.0",
 		"axios": "^1.11.0",
 		"body-parser": "^2.2.0",
+		"discord-invite": "^4.0.8",
 		"discord.js": "^14.14.1",
 		"dotenv": "^16.4.5",
 		"express": "^5.1.0",
