--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
 	},
 	"devDependencies": {
 		"prettier": "^3.2.5",
-		"prisma": "^6.15.0",
+		"prisma": "^6.16.2",
 		"turbo": "^2.5.6"
 	},
-	"packageManager": "npm@10.8.1"
+	"packageManager": "npm@10.8.1",
+	"dependencies": {
+		"@prisma/client": "^6.16.2"
+	}
 }
